<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sudoko Hint</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0"> </string>
    <string name="button_done">Done</string>
    <string name="button_hint">Hint?</string>
    <string name="button_set">Set Sudoku</string>
    <string name="button_clear">Clear Sudoku</string>
    <string name="edit_view"></string>
    <string name="menu_set">Set Sudoku</string>
    <string name="menu_hint">Random Hint</string>
    <string name="menu_solve">Solve Sudoku</string>
    <string name="menu_restart">Clear Attempt</string>
    <string name="menu_check">Check Progress</string>
    <string name="menu_checkloc">Check What's Left</string>

</resources>
