<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="4" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_column="2"
        android:layout_gravity="center"
        android:text="@string/edit_view" />
    
    
    <Button 
        android:id="@+id/button_1"
        android:layout_column="1"
        android:layout_row="2"
        android:text="@string/button_1"/>
    <Button 
        android:id="@+id/button_2"
        android:layout_column="2"
        android:text="@string/button_2"/>
    <Button 
        android:id="@+id/button_3"
        android:layout_column="3"
        android:text="@string/button_3"/>
    <Button 
        android:id="@+id/button_4"
        android:layout_column="1"
        android:text="@string/button_4"/>
    <Button 
        android:id="@+id/button_5"
        android:layout_column="2"
        android:text="@string/button_5"/>
    <Button 
        android:id="@+id/button_6"
        android:layout_column="3"
        android:text="@string/button_6"/>
    <Button 
        android:id="@+id/button_7"
        android:layout_column="1"
        android:text="@string/button_7"/>
    <Button 
        android:id="@+id/button_8"
        android:layout_column="2"
        android:text="@string/button_8"/>
    <Button 
        android:id="@+id/button_9"
        android:layout_column="3"
        android:text="@string/button_9"/>
    <Button 
        android:id="@+id/button_hint"
        android:layout_column="1"
        android:text="@string/button_hint" />
    <Button 
        android:id="@+id/button_0"
        android:layout_column="2"
        android:text="@string/button_0" />
    <Button
        android:id="@+id/button_done"
        android:layout_column="3"
        android:text="@string/button_done"
        />
</GridLayout>