<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_set"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_set"/>
    <item
        android:id="@+id/menu_hint"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_hint"/>
    <item
        android:id="@+id/menu_solve"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_solve"/>
    <item
        android:id="@+id/menu_restart"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_restart"/>
    <item
        android:id="@+id/menu_check"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_check"/>
    <item
        android:id="@+id/menu_checkloc"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_checkloc"/>

</menu>
